# ReportCreator

./: .gitignore  CMakeLists.txt  Main.qml
Src/: data.h  main.cpp  read_doc.h
